refactor(cache): use wrapper DTOs for Redis serialization & fix pagination
- Rename PagedResponse to PageResponse for consistency.
- Introduce CategoryListData and ProductListData to wrap raw Lists, preventing Jackson LinkedHashMap and START_ARRAY deserialization errors in Redis.
- Update Controllers and Services to return PageResponse and Wrapper DTOs instead of Spring's Page and raw Lists.
- Enhance RedisCacheConfig with GenericJackson2JsonRedisSerializer and DefaultTyping for robust polymorphic deserialization.
- Improve PagingAndSortingHelper with safe bounds checking and keyword trimming.
- Update related unit tests to use real PagingAndSortingHelper instances and assert against PageResponse.